Modification de la façon d'actualiser l'application (suppresion du ClassLoader) afin de fixer des bugs